trunk/Archive2/00/d22affc37fa79d/output
main.cpp: In function 'int main()':
main.cpp:10:5: error: 'iota' is not a member of 'std'
     std::iota(from_vector.begin(), from_vector.end(), 0);
     ^
